
2012-08-29  Christopher Michael

        * Add Copy-N-Paste support for Ecore_Wayland.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-31  Cedric Bail

	* Add Ecore_Con_Eet API to help using Eet_Data with Ecore_Con

2012-09-03  Shinwoo Kim (kimcinoo)

       * Add ecore_x illume access messages:
         ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_UP
         ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_DOWN

2012-09-04  Jihoon Kim (jihoon)

       * Add ECORE_IMF_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN

2012-09-05  Mike Blumenkrantz

       * Fix crash that could occur in ecore_con_ssl with privkeys and certificates on failure

2012-09-06  Mike Blumenkrantz

       * Fix race condition in ecore-con where events could sometimes be sent for freed clients
       * Fix ssl servers using openssl
       * Fix ssl connections overall

2012-09-07  Christopher Michael

       * Fix ecore_x_randr to actually return outputs properly.

2012-09-08  Vincent Torri

       * Fix readlink usage in ecore_file.

2012-09-12  Jihoon Kim (jihoon)

       * Add ECORE_IMF_PREEDIT_TYPE_SUB4~7 style.

2012-09-10  Christopher Michael

       * Fix ecore_x_randr to actually return crtcs properly.

2012-09-11  Christopher Michael

       * Fix ecore_x_randr to actually return crtcs possible outputs properly.
       * Fix ecore_x_randr to actually return crtcs outputs properly.

2012-09-13  Mike Blumenkrantz

       * Return -1 for ecore_con_server_fd_get() in the case that the server has already been deleted

2012-09-13  Carsten Haitzler (The Rasterman)

       * Fix ecore-evas rotation handling for canvases that shows up
       only on some drivers and GL implementations.

2012-09-14  Doyoun Kang

       * Add string to atom_items for ECORE_X_ATOM_E_ILLUME_WINDOW_STATE, 
       ECORE_X_ATOM_E_ILLUME_WINDOW_STATE_NORMAL, ECORE_X_ATOM_E_ILLUME_WINDOW_STATE_FLOATING

2012-09-18  Patryk Kaczmarek

       * Fix escaping in ecore_file_escape_name() to handle tab and
       newline right.
